# ucos_drone

./: CMakeLists.txt  README.md
HARDWARE/inc/: HMC5883L.h  HMC5883LAdress.h  MPU.h  MPU6050Adress.h  Moter.h  Receiver.h  Serial.h
HARDWARE/src/: HMC5883L.c  MPU.c  Moter.c  MyI2C.c  Receiver.c  Serial.c
SYSTEM/inc/: Delay.h
SYSTEM/src/: Delay.c
USER/inc/: stm32f4xx.h  stm32f4xx_it.h
USER/src/: main.c  stm32f4xx_it.c
os/inc/: app_cfg.h  os.h  os_cpu.h  ucos_ii.h
os/src/: os_cpu.c
